# comp2113-engg1340-group-project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  bank.cpp  bank.h  controls.cpp  controls.h  draw.cpp  draw.h  events.cpp  events.h  file_io  file_io.cpp  file_io.h  format.cpp  format.h  graph  graph.cpp  graph.h  graph_plotting.cpp  graph_plotting.h  input_events.cpp  input_events.h  logo.txt  main.cpp  names.cpp  names.h  player.h  printing.cpp  printing.h  random_price.cpp  random_price.h  stock.cpp  stock.h  test.cpp
.github/: CODEOWNERS  Doxyfile
.github/workflows/: ci.yml  clang-format.yml  make.yml  pr-format.yml  static.yml
graph.dSYM/Contents/: Info.plist
graph.dSYM/Contents/Resources/DWARF/: graph
include/: controls.h  events.h  file_io.h  graph.h  names.h  random_price.h  stock.h
include/nonstdlibs/: README.md
nonstdlibs/: README.md  sample.cpp
src/: controls.cpp  draw.cpp  events.cpp  file_io.cpp  format.cpp  graph.cpp  main.cpp  names.cpp  random_price.cpp  stock.cpp
stocksim.dSYM/Contents/: Info.plist
